--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,72 +2,82 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-    --radius: 0.5rem;
+    --background-primary: 240 242 245;
+    --background-secondary: 255 255 255;
+    --background-inverse: 249 250 251;
+
+    --border-primary: 13 19 26 / 0.15;
+
+    --content-primary: 23 33 43;
+    --content-secondary: 122 138 153;
+    --content-ternary: 167 180 194;
+    --content-disabled: 167 180 194;
+
+    --semantic-warning: 255 169 71;
+    --semantic-negative: 245 78 89;
+    --semantic-positive: 0 129 194;
+
+    --accent-primary: 0 129 194;
+    --accent-secondary: 0 173 121;
+    --accent-ternary: 111 66 235;
+
+    --button-supply: 0 194 137;
+    --button-supply-muted: 0 194 137;
+    --button-borrow: 111 66 235;
+    --button-neutral: 216 223 229;
+    --button-disabled: 240 242 245;
   }
 
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --background-primary: 13 19 26;
+    --background-secondary: 29 40 51;
+    --background-inverse: 23 33 43;
+
+    --border-primary: 249 250 251 / 0.15;
+
+    --content-primary: 255 255 255;
+    --content-secondary: 122 138 153;
+    --content-ternary: 81 96 112;
+    --content-disabled: 81 96 112;
+
+    --semantic-warning: 255 135 31;
+    --semantic-negative: 245 78 89;
+    --semantic-positive: 0 194 137;
+
+    --accent-primary: 0 170 255;
+    --accent-secondary: 0 194 137;
+    --accent-ternary: 143 102 255;
+
+    --button-supply: 0 173 121;
+    --button-supply-muted: 7 62 46;
+    --button-borrow: 111 66 235;
+    --button-neutral: 43 57 71;
+    --button-disabled: 23 33 43;
   }
 }
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border-primary;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background-primary text-content-primary paragraph-md;
+  }
+  h1 {
+    @apply title-1;
+  }
+  h2 {
+    @apply title-2;
+  }
+  h3 {
+    @apply title-3;
+  }
+  h4 {
+    @apply title-4;
+  }
+  h5 {
+    @apply title-5;
   }
 }
