Done all action flows for desktop. Still corner cases around max values, and need public allocator support

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@
 
 @layer base {
   * {
-    @apply border-border-primary;
+    @apply break-all border-border-primary;
   }
   body {
     @apply bg-background-primary text-content-primary paragraph-md;
