--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,6 +33,8 @@
     --button-borrow: 111 66 235;
     --button-neutral: 216 223 229;
     --button-disabled: 240 242 245;
+
+    --header-height: 76px;
   }
 
   .dark {
@@ -60,6 +62,12 @@
     --button-borrow: 111 66 235;
     --button-neutral: 43 57 71;
     --button-disabled: 23 33 43;
+  }
+
+  @media (max-width: 768px) {
+    :root {
+      --header-height: 104px;
+    }
   }
 }
 
