--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,9 @@
     --background-secondary: 255 255 255;
     --background-inverse: 249 250 251;
     --background-accent: 206 232 245;
+    --background-warning: 255 231 184;
+    --background-negative: 247 197 200;
+    --background-positive: 197 235 223;
 
     --border-primary: 13 19 26 / 0.15;
 
@@ -43,6 +46,9 @@
     --background-secondary: 29 40 51;
     --background-inverse: 23 33 43;
     --background-accent: 6 50 71;
+    --background-warning: 71 34 20;
+    --background-negative: 74 30 34;
+    --background-positive: 7 62 46;
 
     --border-primary: 249 250 251 / 0.15;
 
