--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,7 @@
 
     --accent-primary: 0 129 194;
     --accent-secondary: 0 173 121;
+    --accent-secondary-deemphasized: 111 66 235;
     --accent-ternary: 111 66 235;
 
     --button-supply: 0 194 137;
@@ -55,6 +56,7 @@
 
     --content-primary: 255 255 255;
     --content-secondary: 122 138 153;
+    --accent-secondary-deemphasized: 132 153 255;
     --content-ternary: 81 96 112;
     --content-disabled: 81 96 112;
 
